# rust-fullstack-demo

./: .gitignore  Cargo.toml  Makefile.toml  README.md  crates-you-should-know.md  docker-compose.yml  toolchain.toml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
backend/src/config/: app_state.rs  cors.rs  database.rs  env.rs  env_keys.rs  mod.rs
backend/src/routes/: add_review.rs  all_beers.rs  mod.rs  one_beer_by_id.rs
database/: Cargo.toml  README.md
database/entity/: Cargo.toml
database/entity/src/: beer.rs  lib.rs  mod.rs  prelude.rs  review.rs
database/migration/: Cargo.toml
database/migration/data/: beers.csv
database/migration/src/: lib.rs  m20221106_103001_create_beer_table.rs  m20221106_104329_create_review_table.rs  m20221106_115011_db_seeder.rs  main.rs
database/src/: lib.rs
frontend/: Cargo.toml  Dockerfile  README.md  bootstrap.js  httpd.conf  package.json  pnpm-lock.yaml  styles.scss  webpack.config.js
frontend/src/: lib.rs  routes.rs
frontend/src/api/: beer.rs  mod.rs  review.rs
frontend/src/components/: beer_card.rs  mod.rs  rating_stars.rs  review_form.rs  reviews_card.rs
frontend/src/pages/: beer_detail.rs  beer_list.rs  mod.rs
frontend/static/: index.html
shared/: Cargo.toml  README.md
shared/src/: lib.rs
