[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
env_logger = "0.9.1"
database = { path = "../database" }
entity = { path = "../database/entity" }
shared = { path= "../shared" }
log = "0.4.17"
dotenv = "0.15.0"
serde = "1.0.147"
