[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["toadslop <bnheise@gmail.com"]
readme = "./README.md"
description = "Frontend for example Rust fullstack application.."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
gloo-console = "0.2.3"
load-dotenv = "0.1.2"
reqwasm = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wee_alloc = "0.4.5"
yew = "0.19.3"
entity = { path = "../database/entity" }
getrandom = { version = "0.2.8", features = ["js"] }
yew-router = "0.16.0"
url = "2.3.1"
shared = { path = "../shared" }

[lib]
crate-type = ["rlib", "cdylib"]
