[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
shared = { path = "../../shared" }

[dependencies.sea-orm-migration]
version = "^0.10.0"
features = [
  "runtime-actix-rustls",
  "sqlx-postgres"
]
