[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
shared = { path = "../../shared" }
csv = "1.1.6"
fake = "2.5.0"
rand = "0.8.5"
include_dir = "0.7.3"

[dependencies.sea-orm-migration]
version = "^0.10.0"
features = [
  "runtime-actix-rustls",
  "sqlx-postgres"
]
